# xDF

./: .gitignore  README.md  pyproject.toml
MatlabTests/: shrinktest.py
Python/: AC_Utils.py  MatMan.py  utils.py  xDF.py  xDF_Demo.py
Python/MatlabTests/: shrinktest.py
examples/: plot_correlations.ipynb
xdf/: __init__.py  _version.py  matrix.py  references.bib  utils.py  xdf.py
